<resources>
    <string name="app_name">جرات یا حقیقت | بطری بازی</string>
    <string name="developer_team_name">تیم توسعه دهنده دراگون تک</string>
    <string name="version_code">ورژن 1.0.0</string>
    <string name="version">"ورژن  "</string>
    <string name="truth_or_dare">جرات یا حقیقت</string>
    <string name="need_internet">برای مشاهده این قسمت باید به اینترنت متصل باشید</string>
    <string name="start_game">شروع بازی</string>
    <string name="my_questions">سوالات من</string>
    <string name="default_questions">سوالات برنامه</string>
    <string name="support_from_us">حمایت از ما</string>
    <string name="comment">ثبت نظر</string>
    <string name="home_page">صفحه اصلی</string>
    <string name="share_app">اشتراک گذاری برنامه</string>
    <string name="other_app">سایر برنامه ها</string>
    <string name="setting">تنظیمات</string>
    <string name="about_us">درباره ما</string>
    <string name="bad_comment">انتقادات و پیشنهادات</string>
    <string name="exit">خروج</string>
    <string name="questions_list">نمایش سوالات</string>
    <string name="repetitious_question">سوال تکراری</string>
    <string name="sound_setting">تنظیمات صدا</string>
    <string name="rotation_sound">صدای چرخش </string>
    <string name="app_sound">صدای پس زمینه</string>
    <string name="button_sound">صدای دکمه ها</string>
    <string name="select_question_list">از طریق صفحه تنظیمات میتوانید دسته بندی سوالات را مشخص کنید</string>
    <string name="dare">جرات</string>
    <string name="truth">حقیقت</string>
    <string name="sample_question">آخرین بار کی آب خوردی؟</string>
    <string name="change_question">تعویض سوال</string>
    <string name="close">بستن</string>
    <string name="no_question_selected">هیچ سوالی انتخاب نشده است</string>
    <string name="no_question_added">هنوز هیچ سوالی اضافه نشده است</string>
    <string name="add_your_question">با زدن روی دکمه بعلاوه پایین صفحه میتوانید سوال خود را اضافه کنید</string>
    <string name="add_your_list_question">از قسمت لیست سوالات من در منو سمت راست میتوانید سوالات دلخواه خود را اضافه کنید</string>
    <string name="delete_question">حذف سوال</string>
    <string name="delete_message">آیا میخواهید این سوال را حذف کنید؟</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="added_photo">تبریک! بطری شما اضافه شد</string>
    <string name="please_enter_question">لطفا متن سوال را وارد کنید</string>
    <string name="all_question_added_already">قبلا همه سوال ها اضافه شده است</string>
    <string name="ten_question_added">تبریک! ۱۰ سوال به هر دسته بندی اضافه شد</string>
    <string name="need_see_video">برای دریافت جایزه باید ویدیو تا انتها مشاهده شود</string>
    <string name="please_enter_this_field">لطفا این بخش را هم وارد کنید</string>
    <string name="select_player">انتخاب بازیکن</string>
    <string name="player_number">تعداد بازیکنان</string>
    <string name="player_name_1">نام بازیکن 1</string>
    <string name="player_name_2">نام بازیکن 2</string>
    <string name="player_name_3">نام بازیکن 3</string>
    <string name="player_name_4">نام بازیکن 4</string>
    <string name="player_name_5">نام بازیکن 5</string>
    <string name="player_name_6">نام بازیکن 6</string>
    <string name="player_name_7">نام بازیکن 7</string>
    <string name="player_name_8">نام بازیکن 8</string>
    <string name="player_name_9">نام بازیکن 9</string>
    <string name="do_you_want_to_exit">آیا میخواهید از بازی خارج شوید؟</string>
    <string name="do_you_enjoy_this_game">آیا از این بازی رضایت دارید؟</string>
    <string name="do_you_want_to_delete">آیا میخواهید این سوال را حذف کنید؟</string>
    <string name="if_no_interest_pls_goto_insta">در صورت نارضایتی از این بازی و یا هرگونه انتقاد یا پیشنهاد دیگری، بسیار خوشحال میشویم که با کلیک بر روی یکی از راه های ارتباطی زیر، با ما درمیان بگذارید.</string>
    <string name="exit_title">خروج</string>
    <string name="comment_title">ثبت نظر</string>
    <string name="delete_title">حذف</string>
    <string name="show_video_text">با دیدن یک ویدیو کوتاه میتونی این بطری را به بازی اضافه کنی</string>
    <string name="add_question_with_see_video">با دیدن یک ویدیو کوتاه میتونی ۱۰ سوال به سوالات برنامه اضافه کنی</string>
    <string name="add_question">افزودن سوال</string>
    <string name="lets_go">بزن بریم</string>
    <string name="no_matter">بیخیال</string>
    <string name="title_advertising_dialog">افزودن سوال</string>
    <string name="title_select_advertising_dialog">افزودن بطری</string>
    <string name="enter_your_question">سوال خود را وارد کنید</string>
    <string name="add">افزودن</string>
    <string name="call_us">راه های ارتباط با ما</string>
    <string name="developers_name">محمدعلی عطار علیایی - محمد یزدی</string>
    <string name="developers">توسعه دهندگان:</string>
    <string name="max_number">حداکثر تعداد بازیکنان 9 نفر میباشد</string>
    <string name="min_number">حداقل تعداد بازیکنان 2 نفر میباشد</string>
    <string name="category">دسته بندی</string>
    <string name="unknown_error">خطای ناشناخته</string>
    <string name="instagram_page_address">https://www.instagram.com/dragon_.tech/</string>
    <string name="instagram_package_name">com.instagram.android</string>
    <string name="need_install_caffe_bazaar">برای ثبت نظر باید اپلیکیشن بازار را نصب داشته باشید</string>
    <string name="comment_caffe_bazaar">bazaar://details?id=</string>
    <string name="developer_caffe_bazaar">https://cafebazaar.ir/developer/mohammad9731</string>
    <string name="app_link_download">"لینک دانلود برنامه "</string>
    <string name="app_id_caffe_bazaar">http://cafebazaar.ir/app/?id=</string>
    <string name="email_address">dragontech.developers@gmail.com</string>
    <string name="send_email">ارسال ایمیل با...</string>
    <string name="hemayat_text">جهت حمایت از ما میتوانید بر روی این بنر تبلیغاتی کلیک کنید</string>
    <string name="thank_you">با تشکر</string>
    <string name="please_wait">لطفا صبر کنید</string>
    <string name="thanks_comment">با تشکر از شما که با دادن امتیاز بالا از ما حمایت میکنید</string>
</resources>