<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_comment_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"


    >

    <TextView
        style="@style/title_dialog_style"
        android:layout_width="match_parent"
        android:text="@string/comment_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/text_dialog_style"
        android:layout_width="match_parent"
        android:text="@string/do_you_enjoy_this_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        style="@style/ll_dialog_style"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"

        >

        <TextView
            android:id="@+id/tv_no_comment"
            style="@style/btn_dialog_style"
            android:text="@string/no"

            />


        <TextView
            android:id="@+id/tv_yes_comment"
            style="@style/btn_dialog_style"
            android:text="@string/yes"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>