<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginRight="@dimen/_20sdp"
    android:layout_marginLeft="@dimen/_20sdp"
    android:layout_gravity="center"
    android:id="@+id/cl_add_dialog"
    android:background="@android:color/transparent"
    >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="@dimen/_20sdp"
    android:id="@+id/cl_inner_add_question_dialog"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/wood_board_without_pich"/>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="6"
        >


        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/enter_your_question"
            android:layout_margin="@dimen/_15sdp"
            android:layout_weight="3"
            android:layoutDirection="rtl"
            android:gravity="top"
            style="@style/til_name_style"
            >


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_text_question"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/lalezar_regular"
                android:layoutDirection="rtl"
                android:textColor="@color/brown_500"
                android:textColorHint="@color/brown_500"
                android:textSize="@dimen/_15sdp"
                android:gravity="top"
           android:textCursorDrawable="@null"

                />


        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layoutDirection="rtl"
            android:layout_weight="1">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_truth"
                android:layout_marginRight="@dimen/_10sdp"
                android:checked="true"
                android:textColor="@color/brown_500"
                android:fontFamily="@font/lalezar_regular"
                android:buttonTint="@color/brown_500"
                android:textSize="@dimen/_25sdp"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/truth"

                />



            <RadioButton
                android:id="@+id/rb_dare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:fontFamily="@font/lalezar_regular"
                android:textSize="@dimen/_25sdp"
                android:textColor="@color/brown_500"
                android:buttonTint="@color/brown_500"

                android:text="@string/dare"/>


        </RadioGroup>


    </LinearLayout>








</androidx.constraintlayout.widget.ConstraintLayout>




   <TextView
       android:layout_width="match_parent"
       style="@style/title_dialog_style"
       android:text="@string/add_question"
       app:layout_constraintTop_toTopOf="@id/cl_inner_add_question_dialog"
       app:layout_constraintBottom_toTopOf="@id/cl_inner_add_question_dialog"

       />



    <LinearLayout
        android:layout_width="match_parent"
        style="@style/ll_dialog_style"
        app:layout_constraintBottom_toBottomOf="parent"

        >

        <TextView
            android:id="@+id/tv_close_add_dialog"
            style="@style/btn_dialog_style"
            android:text="@string/close"
            />


        <TextView
            android:id="@+id/tv_add_question"
            style="@style/btn_dialog_style"
            android:text="@string/add"

            />
    </LinearLayout>









</androidx.constraintlayout.widget.ConstraintLayout>