<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context="activity.SplashScreenActivity">

    <TextView
        android:id="@+id/tv_truth_or_dare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/truth_or_dare"
        android:textColor="@color/ice_card_dark"
        android:textSize="@dimen/tv_splash_truth_or_dare_text_size"
        app:layout_constraintBottom_toTopOf="@id/iv_program_icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_program_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_team_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developer_team_name"
        android:textColor="@color/ice_card_dark"
        android:textSize="@dimen/tv_splash_team_name_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_program_icon" />


    <TextView
        android:id="@+id/tv_code_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version_code"
        android:textColor="@color/ice_card_dark"
        android:textSize="@dimen/tv_splash_code_version_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_team_name" />


</androidx.constraintlayout.widget.ConstraintLayout>