<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context=".activity.MainActivity"

    tools:openDrawer="right">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main"
        tools:context=".activity.MainActivity">


        <View
            android:id="@+id/view_oval"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/bg_oval"
            android:rotation="180"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_menu"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/menubtn"
            android:elevation="@dimen/_100sdp"
            android:onClick="onClick"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />




        <FrameLayout
            android:id="@+id/fl_fragment_full_screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="@dimen/_150sdp">

        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="@dimen/_20sdp">

        </FrameLayout>


        <ImageView

            android:id="@+id/tv_show_start_dialog"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:onClick="onClick"
            android:background="@drawable/tree_wood_btn"
            app:layout_constraintBottom_toBottomOf="@id/view_oval"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_oval" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/start_game"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tv_show_start_dialog"
            app:layout_constraintLeft_toLeftOf="@id/tv_show_start_dialog"
            app:layout_constraintRight_toRightOf="@id/tv_show_start_dialog"
            app:layout_constraintTop_toTopOf="@id/tv_show_start_dialog" />


        <TextView
            android:id="@+id/tv_my_question"
            style="@style/tv_main_menu_style"
            android:background="@drawable/oval_wood"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/my_questions"
            app:layout_constraintLeft_toRightOf="@id/tv_default_questions"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_show_start_dialog" />

        <TextView
            android:id="@+id/tv_default_questions"
            style="@style/tv_main_menu_style"
            android:background="@drawable/oval_wood"
            android:text="@string/default_questions"
            app:layout_constraintBottom_toBottomOf="@id/tv_my_question"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tv_my_question"
            app:layout_constraintTop_toTopOf="@id/tv_my_question" />

        <TextView
            android:id="@+id/tv_hemayat"
            style="@style/tv_main_menu_style"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/oval_wood"
            android:text="@string/support_from_us"
            app:layout_constraintLeft_toRightOf="@id/tv_comment"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_my_question" />

        <TextView
            android:id="@+id/tv_comment"
            style="@style/tv_main_menu_style"
            android:background="@drawable/oval_wood"
            android:text="@string/comment"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tv_hemayat"
            app:layout_constraintTop_toTopOf="@id/tv_hemayat"

            />


        <TextView
            android:id="@+id/tv_setting"
            style="@style/tv_main_menu_style"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/oval_wood"
            android:text="@string/setting"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_comment"


            />

        <RelativeLayout
            android:id="@+id/standardBanner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:elevation="@dimen/_100sdp"

            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView

        android:id="@+id/navigation_view"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:background="#03365E"
        android:layoutDirection="rtl"
        android:visibility="gone"
        app:itemIconTint="#ffffff"
        app:itemTextColor="#ffffff"
        app:menu="@menu/navigation_view_menu" />

</androidx.drawerlayout.widget.DrawerLayout>


